# nsu-course-2

./: README.md
evmpu/pract1_optimization_lvls/: a.out  main.cpp  отчёт по практике 1.docx
evmpu/pract2_asm/: CMakeLists.txt  отчёт по практике 2.docx
evmpu/pract3_openCV/: CMakeLists.txt  capt_camera.cpp  отчёт по практике 3.docx
evmpu/pract3_usb/: CMakeLists.txt  main.cpp
evmpu/pract4_vectorization/: CMakeLists.txt  отчёт по практике 4.docx
evmpu/pract4_vectorization/OpenBLAS/lapack-netlib/SRC/: cgedmd.f90  dgedmd.f90  sgedmd.f90  zgedmd.f90
evmpu/pract4_vectorization/openblas_x64-windows/: CONTROL
evmpu/pract4_vectorization/openblas_x64-windows/debug/lib/: openblas.lib
evmpu/pract4_vectorization/openblas_x64-windows/debug/lib/pkgconfig/: openblas.pc
evmpu/pract4_vectorization/openblas_x64-windows/include/openblas/: openblas_config.h
evmpu/pract4_vectorization/openblas_x64-windows/lib/pkgconfig/: openblas.pc
evmpu/pract4_vectorization/openblas_x64-windows/share/openblas/: OpenBLASTargets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
evmpu/pract4_vectorization/src/: blas_matrix.cpp  blas_matrix.h  intrinsic_matrix.cpp  intrinsic_matrix.h  main.cpp  usual_matrix.cpp  usual_matrix.h
evmpu/pract4_vectorization/trash/: blass0.cpp  commands.txt  default0.cpp  manual0.cpp  without_vectorization.cpp
evmpu/pract5_cash/: 1.txt  CMakeLists.txt  отчёт по практике 5.docx
evmpu/pract5_cash/src/: main.cpp
evmpu/pract5_cash/tables_of_results/: 1.1.txt  1.txt  2.1.txt  2.txt  3.1.txt  3.txt
evmpu/pract6_level_of_associativity/: CMakeLists.txt  main.cpp  Отчёт по практике 6.docx
evmpu/pract6_level_of_associativity/trash/: L1.txt  L2.txt  L3.txt  save.txt  save0.txt
java/: README.md
java/JavaTask1/: input.txt  output.txt
java/JavaTask1/src/: Main.java  Pair.java  Statistics.java  StatisticsReader.java  StatisticsWriter.java
java/JavaTask2/: pom.xml
java/JavaTask2/src/main/java/ru/nsu/nikvel/calculator/: Calculator.java  CalculatorData.java  UI.java
java/JavaTask2/src/main/java/ru/nsu/nikvel/calculator/commands/: Command.java  CommandFactory.java  CommentCommand.java  DefineCommand.java  DivideCommand.java  HelpCommand.java  MinusCommand.java  MultiplyCommand.java  PlusCommand.java  PopCommand.java  PrintCommand.java  PushCommand.java  SqrtCommand.java
java/JavaTask2/src/main/java/ru/nsu/nikvel/calculator/exceptions/: CastException.java  (+8 more)
java/JavaTask2/src/main/resources/: config.txt  log4j2.xml
java/JavaTask2/src/main/resources/testcases/: fileTest.txt
java/JavaTask3/: pom.xml
java/JavaTask3/src/main/java/: module-info.java
java/JavaTask3/src/main/resources/ru/nsu/nikvel/tetris/: highScores.txt
oop/: .gitignore  README.md
oop/lab0a_Namescapes/: CMakeLists.txt
oop/lab0a_Namescapes/src/: main.cpp  module1.cpp  module2.cpp  module3.cpp
oop/lab0b_CSV/: CMakeLists.txt  csv_writer.cpp  csv_writer.h  main.cpp  text_data.cpp  text_data.h
oop/lab0b_CSV/data/: input.txt  output.csv
oop/lab1b_CircularBuffer/: CMakeLists.txt  description.txt
oop/lab1b_CircularBuffer/src/: circular_buffer.h  circular_buffer.hpp  main.cpp
oop/lab1b_CircularBuffer/test/: test_circular_buffer.cpp
oop/lab2b_GameOfLife/: CMakeLists.txt  documentation.txt
oop/lab2b_GameOfLife/src/: field.cpp  field.h  game_controller.cpp  game_controller.h  initial_parameters.cpp  initial_parameters.h  main.cpp  universe.cpp  universe.h
oop/lab2b_GameOfLife/test/: test_game_of_life.cpp
oop/lab3_SoundProcessor/: CMakeLists.txt
oop/lab3_SoundProcessor/src/: main.cpp
opp/: README.md  pract_template_1.docx
opp/task1/: task1_Соломенников.docx  zadan_comment_pract1_dva_vectora.docx
opp/task1/src/: prog1.cpp  prog1.out  prog2.cpp  prog2.out  prog3.cpp  prog3.out  settings.h  test1.cpp  test1.out
opp/task2/: instruction_cluster_4studs.doc  task2_Соломенников.docx  zadan_comment_pract2_SLAU_MPI.docx
opp/task2/src/: config.h  launch4.sbatch  prog1.cpp  prog1.out  prog2.cpp  prog2.out  prog3.cpp
opp/task3/: task3_Соломенников.docx  zadan_comment_pract3_OPP_OpenMP.docx
opp/task3/src/: config.h  omp_parallel_for.cpp  omp_parallel_for.out  omp_parallel_for_schedule.cpp  omp_parallel_for_schedule.out  parallel.cpp  parallel.out  sequential.cpp  sequential.out
opp/task4/: launch.sbatch  task4_Соломенников.docx
opp/task4/src/: prog1.cpp  prog1.out  prog2.cpp  prog2.out
opp/task5/: pract_5_Solomennikov.docx  zadan_pract5.docx.docx
opp/task5/src/: parallel.cpp  parallel_optimized.cpp  sequential.cpp  sequential_optimized.cpp
opp/task6/: pract_6_Solomennikov.docx  zadan_comments_pract6_OPP_POSIX_Threads.docx
opp/task6/src/: main.cpp  main.out
os/: README.md
os/task1/st2/: hello.c  static_hello.c  static_hello.h
os/task1/st3/: .hello.c.swp  dynamic_hello.c  dynamic_hello.h  hello.c
os/task1/st4/: .hello.c.swp  dyn_runtime.c  dyn_runtime.h  hello.c
os/task2/st1/: hello  hello1.c  hello2.c  index.html.2
os/task2/st2/: hello.S  hello.out  hello3.asm
os/task3/st1/: main.cpp  main.out  ppc.niam  tuo.niam
os/task3/st1/riDtset/: tuo.niam  txt.eliFgib  txt.eliFtset
os/task3/st1/testDir/: bigFile.txt  main.out
os/task3/st2/: createHardLink  main.cpp
os/task4/st1/: a.out  main.cpp
os/task4/st2/: a.out  prog1.cpp  prog2.cpp
os/task4/st3/: a.out  heap.txt  main.cpp
os/task5/st1/: a.out  main.cpp
os/task5/st2/: a.out  main.cpp
os/task6/st1/: main.cpp  main.out  sharedFile
os/task6/st2/: main.cpp  main.out
os/task7/st1/: client.cpp  client.out  server.cpp  server.out
os/task7/st2/: client.cpp  client.out  server.cpp  server.out
os/task8/: configure.sh  main.cpp  main.out
(+48 files in other folders)
